# asciify

./: .gitignore  Cargo.toml  README.md
res/: color256.json
src/: color256.rs  main.rs  source.rs
