[package]
name = "acsiify"
version = "0.1.0"
authors = ["Benjamin Hinchliff <benjamin.hinchliff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
console = "0.14.0"
opencv = { version = "0.49.1", features = ["contrib"] }
