[package]
name = "acsiify"
version = "0.1.0"
authors = ["Benjamin Hinchliff <benjamin.hinchliff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
clap = "2.33.3"
console = "0.14.0"
lazy_static = "1.4.0"
opencv = "0.49.1"
serde = { version = "1.0.123", features = [ "derive" ] }
serde_json = "1.0.62"
spin_sleep = "1.0.0"
thiserror = "1.0.23"
